# multi_tier_anti_cheat

./: .gitignore  README.md  pyproject.toml
data/RevPOV/dataset/: merged_output.csv  test.csv  val.csv
data/RevPOV/dataset/arff/: final_test.arff  final_train_1.arff  final_train_2.arff  final_train_3.arff  final_train_4.arff  final_train_5.arff  final_train_6.arff  final_train_7.arff  final_train_8.arff  final_train_9.arff  final_val.arff
data/RevStats/dataset/: final_train.csv
multi_tier_anti_cheat/: __init__.py
multi_tier_anti_cheat/common/: csv_utils.py  data_utils.py
multi_tier_anti_cheat/tier1/: randomForest.py
multi_tier_anti_cheat/tier2/: aiApproach.py
tier1/: randomForest.py
tier2/: aiApproach.py
